[project]
name = "python-playground"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "takehiro", email = "takehiro-r133@hotmail.co.jp" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.8",
    "mypy>=1.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true
